--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div id="home" class="section active">
         <div class="text-center mt-5">
           <h1>Welcome to My Portfolio</h1>
-          <p>Hello! My name is Pedro Criado, I am passionate developer with an interest in Networking and Embedded systems</p>
+          <p>Hello! My name is Pedro Criado, I am passionate developer with an interest in Networking and Embedded programming</p>
         </div>
       </div>
 
