added some of my projects

--- a/index.html
+++ b/index.html
@@ -61,7 +61,40 @@
       <div id="projects" class="section">
         <div class="text-center mt-5">
           <h2>Projects</h2>
-          <p>Project details coming soon...</p>
+          <div class="row justify-content-center mt-4">
+            <div class="col-md-8">
+              <div class="card mb-4">
+                <div class="card-body">
+                  <h4 class="card-title">CryptoRace</h4>
+                  <p class="card-text">
+                    A competitive cryptography web application where users solve cryptography problems and compete to get better times.<br>
+                    <strong>Tech Stack:</strong> React.js, Tailwind CSS, Node.js, Express.js, MongoDB, Redis, WebAssembly, C
+                  </p>
+                  <a href="https://github.com/pedrocriado/CryptoRace" target="_blank" class="btn btn-outline-primary">View on GitHub</a>
+                </div>
+              </div>
+              <div class="card mb-4">
+                <div class="card-body">
+                  <h4 class="card-title">Pegasus Parking</h4>
+                  <p class="card-text">
+                    A smart parking solution helping UCF students and faculty find the best parking spots on campus. Features real-time parking spot tracking, interactive campus map, and user authentication.<br>
+                    <strong>Tech Stack:</strong> React 18, TypeScript, Vite, Chakra UI, Express.js, MongoDB, Passport.js
+                  </p>
+                  <a href="https://github.com/garyorsargos/pegasus-parking" target="_blank" class="btn btn-outline-primary">View on GitHub</a>
+                </div>
+              </div>
+              <div class="card mb-4">
+                <div class="card-body">
+                  <h4 class="card-title">Contact Manager</h4>
+                  <p class="card-text">
+                    A basic contact manager with create, retrieve, update, and delete (CRUD) functionality using a REST API written in PHP. Developed for UCF POOS (group 17).<br>
+                    <strong>Tech Stack:</strong> JavaScript, PHP, HTML, CSS, MariaDB
+                  </p>
+                  <a href="https://github.com/matt11matthew/ContactManager" target="_blank" class="btn btn-outline-primary">View on GitHub</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
