--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="card-body">
                   <h4 class="card-title">Contact Manager</h4>
                   <p class="card-text">
-                    A basic contact manager with create, retrieve, update, and delete (CRUD) functionality using a REST API written in PHP. Developed for UCF POOS (group 17).<br>
+                    A basic contact manager with create, retrieve, update, and delete (CRUD) functionality using a REST API written in PHP.<br>
                     <strong>Tech Stack:</strong> JavaScript, PHP, HTML, CSS, MariaDB
                   </p>
                   <a href="https://github.com/matt11matthew/ContactManager" target="_blank" class="btn btn-outline-primary">View on GitHub</a>
