--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Pedro's Portfolio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link href="static/css/style.css" rel="stylesheet">
+  <link href="static/css/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
@@ -21,7 +21,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="https://www.linkedin.com/in/pedro-criado-677p/" target="_blank" class="nav-link">
+            <a href="https://www.linkedin.com/in/pedrocriado-fl/" target="_blank" class="nav-link">
               <img src="static/img/linkedin_logo.png" alt="linkedin" class="linkedin-logo">
             </a>
           </li>
@@ -138,27 +138,14 @@
     </div>
 
     <footer>
+      <div>
+        &copy; 2025 Pedro Criado &mdash; <a href="https://github.com/pedrocriado" target="_blank" style="color:#0d6efd;text-decoration:none;">GitHub</a>
+      </div>
     </footer>
 
   </body>
 </html>
-<script>
-    // Section navigation (hash-based)
-    function showSectionFromHash() {
-      var hash = window.location.hash.replace('#', '') || 'home';
-      document.querySelectorAll('.section').forEach(function(sec) {
-        sec.classList.remove('active');
-      });
-      var section = document.getElementById(hash);
-      if (section) {
-        section.classList.add('active');
-        window.scrollTo(0, 0);
-      }
-    }
-    window.addEventListener('hashchange', showSectionFromHash);
-    window.addEventListener('DOMContentLoaded', showSectionFromHash);
-
-    // Resume button logic
+<script>    
     document.addEventListener('DOMContentLoaded', function() {
       var showBtn = document.getElementById('showResumeBtn');
       var resumeContent = document.getElementById('resumeContent');
